--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -85,87 +85,9 @@ img {
   }
 }
 
-.header-address-link {
-  display: flex;
-  align-items: center;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.02em;
-  color: #757575;
-  text-decoration: none;
-  align-items: center;
-  fill: currentColor;
-  width: 161px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-address-link:hover, .header-address-link:focus {
-  color: #2196f3;
-  fill: #2196f3;
-}
-
-li:hover .header-address-link {
-  color: #2196f3;
-}
-
-.navigation-list-link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: #757575;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.navigation-list-link:hover, .navigation-list-link:focus {
-  color: #2196f3;
-  fill: #2196f3;
-}
-
 .header {
-  display: flex;
-  align-items: center;
-  width: 1600px;
-  height: 80px;
   border: 1px solid #ececec;
-}
-
-.navigation {
-  display: flex;
-  align-items: center;
-}
-
-.navigation-list {
-  display: flex;
-}
-
-.navigation-list-item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.navigation-list-link {
-  padding-bottom: 32px;
-  padding-top: 32px;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: #212121;
-}
-
-.address-list {
-  display: inline-flex;
-  align-items: center;
-  margin-left: auto;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-}
-
-.address-list-item + .address-list-item {
-  margin-left: 50px;
+  z-index: 1000;
 }
 
 .header-envelope-icon {
@@ -190,6 +112,177 @@ li:hover .header-envelope-icon {
 
 li:hover .header-smartphone-icon {
   fill: #2196f3;
+}
+
+.navigation-list-link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: #212121;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.navigation-list-link:hover, .navigation-list-link:focus {
+  color: #2196f3;
+  fill: #2196f3;
+}
+
+.header-address-link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: #757575;
+  text-decoration: none;
+  fill: currentColor;
+  width: 161px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-address-link:hover, .header-address-link:focus {
+  color: #2196f3;
+  fill: #2196f3;
+}
+
+li:hover .header-address-link {
+  color: #2196f3;
+}
+
+.menu-button {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.menu-button .icon-cross {
+  display: none;
+}
+
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
+.menu-button:hover, .menu-button:focus {
+  fill: #2196f3;
+  outline: none;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header {
+    min-width: 480px;
+    position: relative;
+  }
+  .navigation {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 60px;
+  }
+  .navigation-list {
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
+  .navigation-list-item:not(:last-child) {
+    margin-bottom: 40px;
+  }
+  .navigation-list-link {
+    font-size: 18px;
+    line-height: 1.17;
+  }
+  .address-list {
+    margin-bottom: 60px;
+  }
+  .address-list-item:not(:last-child) {
+    margin-bottom: 16px;
+  }
+  .header-address-link {
+    font-size: 18px;
+    line-height: 1.17;
+  }
+  .menu-container {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 400px;
+    background: #ffffff;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+    text-align: center;
+  }
+  .menu-container.is-open {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .navigation {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 80px;
+  }
+  .menu-container {
+    display: flex;
+    align-items: center;
+  }
+  .navigation-list {
+    display: flex;
+    align-items: center;
+    margin-right: 84px;
+  }
+  .navigation-list-item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .header-address-link {
+    font-size: 12px;
+    line-height: 1.17;
+  }
+  .address-list-item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .navigation {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 80px;
+  }
+  .menu-container {
+    display: flex;
+    align-items: center;
+  }
+  .navigation-list {
+    display: flex;
+    align-items: center;
+    margin-right: 305px;
+  }
+  .navigation-list-item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .address-list {
+    display: flex;
+    align-items: center;
+  }
+  .address-list-item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -648,62 +741,49 @@ li:hover .header-smartphone-icon {
   }
 }
 
-.studio {
+.line {
   position: relative;
 }
 
-.studio::after {
+.line::after {
   content: '';
   display: block;
   position: absolute;
-  bottom: -28px;
   width: 100%;
   height: 4px;
   background: #2196f3;
   border-radius: 2px;
 }
 
-.portfolio {
-  position: relative;
+@media screen and (max-width: 767px) {
+  .line {
+    position: relative;
+  }
+  .line::after {
+    content: '';
+    right: 0;
+    bottom: -8px;
+  }
 }
 
-.portfolio::after {
-  content: '';
-  display: block;
-  position: absolute;
-  bottom: -28px;
-  width: 100%;
-  height: 4px;
-  background: #2196f3;
-  border-radius: 2px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .line {
+    position: relative;
+  }
+  .line::after {
+    content: '';
+    bottom: -32px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
-  .studio {
+  .line {
     position: relative;
   }
-  .studio::after {
+  .line::after {
     content: '';
-    display: block;
-    position: absolute;
     bottom: -32px;
     width: 100%;
-    height: 4px;
-    background: #2196f3;
-    border-radius: 2px;
-  }
-  .portfolio {
-    position: relative;
-  }
-  .portfolio::after {
-    content: '';
-    display: block;
-    position: absolute;
-    bottom: -32px;
-    width: 100%;
-    height: 4px;
-    background: #2196f3;
-    border-radius: 2px;
   }
 }
 
