--- a/sass/components/_line-header.scss
+++ b/sass/components/_line-header.scss
@@ -1,10 +1,9 @@
-.studio {
+.line {
   position: relative;
   &::after {
     content: '';
     display: block;
     position: absolute;
-    bottom: -28px;
     width: 100%;
     height: 4px;
     background: $accent-color;
@@ -12,47 +11,34 @@
   }
 }
 
-.portfolio {
-  position: relative;
+@media screen and (max-width: 767px) {
+  .line {
+    position: relative;
+    &::after {
+      content: '';
+      right: 0;
+      bottom: -8px;
+    }
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .line {
+    position: relative;
+    &::after {
+      content: '';
 
-  &::after {
-    content: '';
-    display: block;
-    position: absolute;
-    bottom: -28px;
-    width: 100%;
-    height: 4px;
-    background: $accent-color;
-    border-radius: 2px;
+      bottom: -32px;
+    }
   }
 }
 @media screen and (min-width: 1200px) {
-  .studio {
+  .line {
     position: relative;
     &::after {
       content: '';
-      display: block;
-      position: absolute;
+
       bottom: -32px;
       width: 100%;
-      height: 4px;
-      background: $accent-color;
-      border-radius: 2px;
-    }
-  }
-
-  .portfolio {
-    position: relative;
-
-    &::after {
-      content: '';
-      display: block;
-      position: absolute;
-      bottom: -32px;
-      width: 100%;
-      height: 4px;
-      background: $accent-color;
-      border-radius: 2px;
     }
   }
 }
