--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,88 +1,6 @@
-.header-address-link {
-  display: flex;
-  align-items: center;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.02em;
-  color: $subtitle-color;
-  text-decoration: none;
-  align-items: center;
-  fill: currentColor;
-  width: 161px;
-
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:hover,
-  &:focus {
-    color: $accent-color;
-    fill: $accent-color;
-  }
-
-  li:hover & {
-    color: $accent-color;
-  }
-}
-.navigation-list-link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: $subtitle-color;
-
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:hover,
-  &:focus {
-    color: $accent-color;
-    fill: $accent-color;
-  }
-}
 .header {
-  display: flex;
-  align-items: center;
-  width: 1600px;
-  height: 80px;
-
   border: 1px solid #ececec;
-}
-
-.navigation {
-  display: flex;
-  align-items: center;
-
-  &-list {
-    display: flex;
-    &-item:not(:last-child) {
-      margin-right: 50px;
-    }
-  }
-  &-list-link {
-    padding-bottom: 32px;
-    padding-top: 32px;
-
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-
-    color: $title-color;
-  }
-}
-
-.address-list {
-  display: inline-flex;
-  align-items: center;
-  margin-left: auto;
-
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-
-  &-item + .address-list-item {
-    margin-left: 50px;
-  }
+  z-index: 1000;
 }
 
 .header-envelope-icon {
@@ -107,3 +25,282 @@
     fill: $accent-color;
   }
 }
+.navigation-list-link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: $title-color;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: $accent-color;
+    fill: $accent-color;
+  }
+}
+.header-address-link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: $subtitle-color;
+  text-decoration: none;
+  fill: currentColor;
+  width: 161px;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: $accent-color;
+    fill: $accent-color;
+  }
+
+  li:hover & {
+    color: $accent-color;
+  }
+}
+.menu-button {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  & .icon-cross {
+    display: none;
+  }
+  &.is-open .icon-cross {
+    display: block;
+  }
+  &.is-open .icon-menu {
+    display: none;
+  }
+  &:hover,
+  &:focus {
+    fill: $accent-color;
+    outline: none;
+  }
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header {
+    min-width: 480px;
+    position: relative;
+  }
+  .navigation {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 60px;
+    &-list {
+      margin-top: 60px;
+      margin-bottom: 60px;
+      &-item:not(:last-child) {
+        margin-bottom: 40px;
+      }
+    }
+    &-list-link {
+      font-size: 18px;
+      line-height: 1.17;
+    }
+  }
+
+  .address-list {
+    margin-bottom: 60px;
+    &-item:not(:last-child) {
+      margin-bottom: 16px;
+    }
+  }
+  .header-address-link {
+    font-size: 18px;
+    line-height: 1.17;
+  }
+  .menu-container {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 400px;
+
+    background: #ffffff;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
+      0px 1px 3px rgba(0, 0, 0, 0.16);
+
+    text-align: center;
+
+    &.is-open {
+      display: block;
+    }
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .navigation {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 80px;
+  }
+  .menu-container {
+    display: flex;
+    align-items: center;
+  }
+  .navigation-list {
+    display: flex;
+    align-items: center;
+    margin-right: 84px;
+    &-item:not(:last-child) {
+      margin-right: 50px;
+    }
+  }
+  .header-address-link {
+    font-size: 12px;
+    line-height: 1.17;
+  }
+  .address-list-item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .navigation {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 80px;
+  }
+  .menu-container {
+    display: flex;
+    align-items: center;
+  }
+  .navigation-list {
+    display: flex;
+    align-items: center;
+    margin-right: 305px;
+    &-item:not(:last-child) {
+      margin-right: 50px;
+    }
+  }
+  .address-list {
+    display: flex;
+    align-items: center;
+    &-item:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
+}
+// .header-address-link {
+//   display: flex;
+//   align-items: center;
+//   font-weight: 500;
+//   font-size: 14px;
+//   line-height: 16px;
+//   letter-spacing: 0.02em;
+//   color: $subtitle-color;
+//   text-decoration: none;
+//   align-items: center;
+//   fill: currentColor;
+//   width: 161px;
+
+//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   &:hover,
+//   &:focus {
+//     color: $accent-color;
+//     fill: $accent-color;
+//   }
+
+//   li:hover & {
+//     color: $accent-color;
+//   }
+// }
+// .navigation-list-link {
+//   font-weight: 500;
+//   font-size: 14px;
+//   line-height: 1.14;
+//   letter-spacing: 0.02em;
+//   color: $subtitle-color;
+
+//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   &:hover,
+//   &:focus {
+//     color: $accent-color;
+//     fill: $accent-color;
+//   }
+// }
+// .header {
+//   display: flex;
+//   align-items: center;
+//   width: 1600px;
+//   height: 80px;
+
+//   border: 1px solid #ececec;
+// }
+
+// .navigation {
+//   display: flex;
+//   align-items: center;
+
+//   &-list {
+//     display: flex;
+//     &-item:not(:last-child) {
+//       margin-right: 50px;
+//     }
+//   }
+//   &-list-link {
+//     padding-bottom: 32px;
+//     padding-top: 32px;
+
+//     font-weight: 500;
+//     font-size: 14px;
+//     line-height: 1.14;
+//     letter-spacing: 0.02em;
+
+//     color: $title-color;
+//   }
+// }
+
+// .address-list {
+//   display: inline-flex;
+//   align-items: center;
+//   margin-left: auto;
+
+//   font-size: 14px;
+//   font-weight: 500;
+//   line-height: 1.14;
+//   letter-spacing: 0.02em;
+
+//   &-item + .address-list-item {
+//     margin-left: 50px;
+//   }
+// }
+
+// .header-envelope-icon {
+//   width: 16px;
+//   height: 12px;
+//   margin-right: 10px;
+//   fill: $subtitle-color;
+//   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   li:hover & {
+//     fill: $accent-color;
+//   }
+// }
+// .header-smartphone-icon {
+//   width: 10px;
+//   height: 16px;
+//   margin-right: 10px;
+//   fill: $subtitle-color;
+//   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   li:hover & {
+//     fill: $accent-color;
+//   }
+// }
